--- a/package.json
+++ b/package.json
@@ -10,12 +10,25 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
+    "axios": "^0.24.0",
     "expo": "~44.0.0",
+    "expo-linking": "^3.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-gesture-handler": "^2.1.1",
+    "react-native-paper": "^4.11.1",
+    "react-native-reanimated": "^2.3.1",
+    "react-native-rss-parser": "^1.5.1",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.10.1",
+    "react-native-shadow-cards": "^1.0.2",
+    "react-native-web": "0.17.1",
+    "rss-to-json": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
